# anathema

./: .gitignore  CMakeLists.txt  README.md  README_PORTUGUÊS.md  build.sh
Anathema/: .gitignore
Anathema/Assets/: Cutscene.cs  CutsceneState.cs  Intro.cs  PauseManager.cs
Anathema/Assets/Fonts/Cinzel Black/: Cinzel-Black SDF.asset
Anathema/Assets/Fonts/Cinzel Decorative/: CinzelDecorative-Black SDF.asset
Anathema/Assets/Fonts/DS Luthersche/: 1001fonts-ds-luthersche-eula.txt  DSLuthersche SDF.asset
Anathema/Assets/Other/: BurnSprite.cginc  BurnSprite.shader  BurnableSprite.mat  Controls.inputactions  MeltSprite.cginc  MeltSprite.shader  MeltableSprite.mat  SmoothGround.physicsMaterial2D
Anathema/Assets/Other/ReorderableList/: Link
Anathema/Assets/Prefabs/: A_.prefab  ArcherAngel.prefab  Cleaning Robot.prefab  CleaningRobot With Spots 2.0.prefab  CleaningRobot With Spots 3.0.prefab  CleaningRobot With Spots 3.1.prefab  CleaningRobot With Spots 3.2.prefab  CleaningRobot With Spots.prefab  DoubleJumpPowerUp.prefab  Drone 2.0.prefab  Drone 3.0.prefab  Drone.prefab  Fire.prefab  FirePowerUp.prefab  KeyPickup.prefab  LifePickUp.prefab  Platform Robot 3.0.prefab  Platform Robot 3.1.prefab  Player.prefab  Player2.0.prefab  Player3.0.prefab  Player3.1.prefab  Player4.0.prefab  PlayerDummy.prefab  ScrollHealthBar.prefab  ScythePowerUp.prefab  SpearAngel 1.0.prefab  SpearAngel 2.0.prefab  SpearAngel.prefab  Spots.prefab  WalkRobotWithSpots.prefab  Wall Robot 2.0.prefab  Wall Robot.prefab  WallRobotWithSpots 3.0.prefab
Anathema/Assets/Prefabs/Rooms/: Area.prefab  BreakableWall.prefab  CameraBounds.prefab  Door.prefab  MetalDoor.prefab  SaveStation.prefab  Sky.prefab  SpawnPoint.prefab  UnlockeableDoor.prefab
Anathema/Assets/Prefabs/UI/: ActionEditor.prefab  BindingEditor.prefab  HealthBar 1.prefab  HealthBar.prefab  InteractionHint.prefab  PauseMenu.prefab  Spoiler.prefab  TextButton.prefab  TextMeshPro - Toggle.prefab  mainMenuTheme.asset
Anathema/Assets/Scenes/: Abner.unity  Church-0.unity  Church-1.unity  Church-2.unity  Church-3.unity  Church-Judas.unity  Church-SaveRoom.unity  Church-SaveRoom1.unity  Church-SaveRoom2.unity  Cutscene-Judas.unity  Demoura.unity  Dialogue.unity  Gyovana.unity  Henrique.unity  Igreja.unity  Intro.unity  Library-0.unity  Library-1.unity  Library-2.1.unity  Library-2.2.unity  Library-2.unity  Library-3.1.unity  Library-3.unity  Library-Books.unity  Library-SaveRoom.unity  Library-Test.unity  Loading.unity  MainMenu.unity  Player.unity  SampleScene.unity  Template.unity  ThankYou.unity  Tutorial-0.unity  Tutorial-1.unity  Tutorial-2.unity  Tutorial-3.unity  Tutorial-4.unity  Tutorial-5.unity  Tutorial-7.unity  Tutorial-Amy.unity  (+2 more)
Anathema/Assets/Scenes/Boss/: Boss-0.unity  Boss-1.unity  Boss-2.unity  Boss-Final.unity  Boss-SaveRoom.unity
Anathema/Assets/Scenes/Church/: Church-3.unity  Church-Judas.unity  Church-SaveRoom2.unity
Anathema/Assets/Scenes/Cutscenes/: Cutscene-Amy.unity  Cutscene-Judas.unity
Anathema/Assets/Scenes/Tutorial/: Tutorial-0.unity  Tutorial-1.unity  Tutorial-4.unity  Tutorial-5.unity  Tutorial-7.unity  Tutorial-Amy.unity
Anathema/Assets/Scripts/: Controls.cs  Death.cs  FiniteStateMachine.cs  Fire.cs  FsmState.cs
Anathema/Assets/Scripts/Attribute/: BaseHideInInspectorAttribute.cs  HideInInspectorIfAttribute.cs  HideInInspectorIfNotAttribute.cs
Anathema/Assets/Scripts/Editor/: HideInInspectorIfDrawer.cs
Anathema/Assets/Scripts/Graphics/: ScalePulse.cs  SpriteBurn.cs
Anathema/Assets/Scripts/Input/: DeadzoneFloat.cs  Initialize.cs  KeepPressedInteraction.cs  StickFloatInteraction.cs
Anathema/Assets/Scripts/Player/: AirAttack.cs  AirFireAttack.cs  Attack.cs  Crouch.cs  CrouchAttack.cs  CutsceneState.cs  Damage.cs  DisableDuringLoading.cs  EventHandling.cs  FireAttack.cs  Health.cs  Idle.cs  JumpFall.cs  JumpRise.cs  PlayerDeath.cs  PlayerFinder.cs  PlayerState.cs  PlayerUpgrades.cs  Walking.cs  WalkingLeft.cs  WalkingRight.cs
Anathema/Assets/Scripts/Robots/: HealthRobots.cs
Anathema/Assets/Scripts/Rooms/: AmyDoor.cs  AutoSetupCamBounds.cs  BreakableDoor.cs  BreakableWall.cs  CameraBoundsSwitcher.cs  ConfinerFinder.cs  CutsceneDoor.cs  DialogueTrigger.cs  Door.cs  DoubleJumpPickup.cs  FireAttackPickup.cs  HealthPickup.cs  HordeEnemy.cs  HordeManager.cs  InteractableDialogueTrigger.cs  JudasDoor.cs  KeyPickup.cs  LibraryBook.cs  MeltableDoor.cs  Parallax.cs  Pickup.cs  SaveStation.cs  ScythePickup.cs  TilemapEditorDisable.cs  UniqueComponent.cs  UniqueID.cs  UniqueTrigger.cs  UnlockableDoor.cs
Anathema/Assets/Scripts/Saving/: GameData.cs  SaveProfile.cs
Anathema/Assets/Scripts/SceneLoading/: DontDestroyOnLoad.cs  FadeIn.cs  FadeOut.cs  SceneLoader.cs  SwapScenes.cs
Anathema/Assets/Scripts/UI/: Cheats.cs  Cutscene.cs  CutsceneUnload.cs  Dialogue.cs  DialogueHandler.cs  DialogueTrigger.cs  EndTmp.cs  ForceSelectOnStart.cs  HealthBar.cs  InputActionEditor.cs  InputBindingEditor.cs  InputConfig.cs  MainMenuTmp.cs  MenuState.cs  NewHealthBar.cs  PauseManager.cs  Refocus.cs  TextButtonBehaviour.cs  TextButtonList.cs  TextButtonPreset.cs  TextButtonStyle.cs  TextButtonTheme.cs
Anathema/Assets/Sprites/Amy/: Amy.controller  AmyAlive.anim  AmyDead.anim
Anathema/Assets/Tilepalletes/: CameraBounds.prefab  Default.prefab  Library.prefab  WallColors.prefab
Anathema/Assets/Tileset/background_wall/: Beige.asset  DarkBeige.asset  DarkGreen.asset  FadedBlue.asset  Green.asset  LightBlue.asset  SoftRed 1.asset  SoftRed.asset  VelvetRed.asset  White.asset  wall.asset
Anathema/Assets/Tileset/column/: column_0.asset  column_1.asset  column_10.asset  column_2.asset  column_3.asset  column_4.asset  column_5.asset  column_6.asset  column_7.asset  column_8.asset  column_9.asset
Anathema/Assets/Tileset/floor/: floor-cracked_0.asset  floor-cracked_1.asset  floor-cracked_10.asset  floor-cracked_11.asset  (+58 more)
Anathema/ProjectSettings/: EditorBuildSettings.asset  InputManager.asset  ProjectSettings.asset  TagManager.asset
InstallerSources/: Anathema.desktop  CMakeDMGSetup.scpt  Description.txt  LICENSE.rtf  symlink.cmake
(+209 files in other folders)
